--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app: ecsdemo-nodejs
     spec:
       containers:
-      - image: brentley/ecsdemo-nodejs:latest
+      - image: brentley/ecsdemo-nodejs:1.2
         imagePullPolicy: Always
         name: ecsdemo-nodejs
         ports:
